// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimate drift — totals per fixture > galley: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 9202,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7072,
}
`;

exports[`estimate drift — totals per fixture > island: total range snapshot 1`] = `
{
  "confirmedBandPct": 8,
  "displayedBandPct": 11,
  "high": 6629,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5322,
}
`;

exports[`estimate drift — totals per fixture > l-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 13,
  "displayedBandPct": 15,
  "high": 9582,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7062,
}
`;

exports[`estimate drift — totals per fixture > peninsula: total range snapshot 1`] = `
{
  "confirmedBandPct": 9,
  "displayedBandPct": 12,
  "high": 9087,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 7211,
}
`;

exports[`estimate drift — totals per fixture > single: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 4264,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 3284,
}
`;

exports[`estimate drift — totals per fixture > u-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 13,
  "displayedBandPct": 15,
  "high": 14017,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 10353,
}
`;
